--- a/app/src/main/res/layout/note_viewing.xml
+++ b/app/src/main/res/layout/note_viewing.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+
             />
 
         <TextView
@@ -32,15 +33,23 @@
             />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/noteText"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="noteText"
-        android:textSize="@dimen/textDescription"
-        android:padding="@dimen/_Margin_1"
-        />
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/noteText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="noteText"
+            android:textSize="@dimen/textDescription"
+            android:padding="@dimen/_Margin_1"
+            />
+
+    </ScrollView>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,6 +88,8 @@
 
 
     </LinearLayout>
+
+
 
 
 </LinearLayout>
