--- a/app/src/main/res/drawable/ic_notes.xml
+++ b/app/src/main/res/drawable/ic_notes.xml
@@ -5,23 +5,23 @@
     android:viewportHeight="1024">
   <path
       android:pathData="M0,0h1024v1024H0z"
-      android:fillColor="#F4F4F4"/>
+      android:fillColor="#E8D8A8"/>
   <path
       android:pathData="M978.8,907.4a70,70 0,0 1,-70 70h-789.5a70,70 0,0 1,-70 -70V210.4a70,70 0,0 1,70 -70h789.5a70,70 0,0 1,70 70v697z"
-      android:fillColor="#F4A417"/>
+      android:fillColor="#F2E3B1"/>
   <path
       android:pathData="M49.4,270.6v636.8a70,70 0,0 0,70 70h458.4c76.8,-184.1 280.7,-706.7 280.7,-706.7H49.4z"
-      android:fillColor="#F4A417"/>
+      android:fillColor="#F2E3B1"/>
   <path
       android:pathData="M49.4,305.3V210.4a70,70 0,0 1,70 -70h789.5a70,70 0,0 1,70 70v94.9H49.4z"
-      android:fillColor="#E37F19"/>
+      android:fillColor="#E6C98E"/>
   <path
       android:pathData="M362.1,281.6a60.2,60.2 0,0 1,-60.2 -60.2V60.2a60.2,60.2 0,0 1,120.4 0v161.2a60.2,60.2 0,0 1,-60.2 60.2zM666.1,281.6a60.2,60.2 0,0 1,-60.2 -60.2V60.2A60.2,60.2 0,0 1,666.1 0c33.3,0 60.2,27 60.2,60.2v161.2a60.2,60.2 0,0 1,-60.2 60.2z"
-      android:fillColor="#E5226B"/>
+      android:fillColor="#3A2E1F"/>
   <path
       android:pathData="M362.1,0a60.2,60.2 0,0 1,60.2 60.2v161.2a60.2,60.2 0,0 1,-60.2 60.2M666.1,0c33.3,0 60.2,27 60.2,60.2v161.2a60.2,60.2 0,0 1,-60.2 60.2"
-      android:fillColor="#C8246D"/>
+      android:fillColor="#4A3B29"/>
   <path
       android:pathData="M782.5,480.9H221.9a30.1,30.1 0,0 1,-30.1 -30.1,30.1 30.1,0 0,1 30.1,-30.1h560.7a30.1,30.1 0,0 1,30.1 30.1,30.1 30.1,0 0,1 -30.1,30.1zM507.9,672.8H221.9c-16.6,0 -30.1,-13.5 -30.1,-30.1s13.5,-30.1 30.1,-30.1h286c16.6,0 30.1,13.5 30.1,30.1s-13.5,30.1 -30.1,30.1z"
-      android:fillColor="#D98D1B"/>
+      android:fillColor="#3A2E1F"/>
 </vector>
