--- a/app/src/main/res/layout/note_card_view.xml
+++ b/app/src/main/res/layout/note_card_view.xml
@@ -1,54 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="15dp"
-    app:cardElevation="3dp"
+    android:layout_height="@dimen/cardHeight"
+    app:cardCornerRadius="@dimen/cardCornerRadius"
+    app:cardElevation="@dimen/cardElevation"
+    app:strokeWidth="@dimen/strokeWidth"
+    app:strokeColor="@color/strokeColor"
+    app:cardBackgroundColor="@color/cardColor"
+
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:id="@+id/linearLayout"
+        android:gravity="center_vertical"
         >
+
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/important"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:buttonTint="@color/checkBoxColor"
+            android:layout_marginEnd="@dimen/checkboxMarginEnd"
+            style="@style/Widget.Material3.CompoundButton.CheckBox"
+            />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            android:orientation="vertical"
+            android:layout_marginEnd="@dimen/checkboxMarginEnd"
             >
-
-            <CheckBox
-                android:id="@+id/important"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                />
-
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:text="Title"
+                android:textStyle="bold"
                 android:maxLines="1"
                 android:textSize="@dimen/textTitle"
                 />
+
+            <TextView
+                android:id="@+id/preview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Preview"
+                android:maxLines="2"
+                android:textSize="@dimen/textDescription"
+                />
+
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/preview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Preview"
-            android:maxLines="1"
-            android:layout_marginStart="10sp"
-            android:textSize="@dimen/textDescription"
-            />
+
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
