--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="backGround">#68aa2b</color>
+<color name="black">#FF000000</color>
+<color name="white">#FFFFFFFF</color>
+<color name="backGround">#A68D6A</color>
+<color name="backGroundEdit">#F7E5A8</color>
+<color name="cardColor">#F7E5A8</color>
+<color name="checkBoxColor">#000000</color>
+<color name="buttonColor">#68aa2b</color>
+<color name="strokeColor">#FF000000</color>
+
 </resources>
+
+
+<!--<resources>
+<color name="black">#FF000000</color>
+<color name="white">#FFFFFFFF</color>
+<color name="backGround">#68aa2b</color>
+<color name="cardColor">#FFFFFFFF</color>
+<color name="buttonColor">#F231F2</color>
+</resources>-->
+
+
+
+<!--<resources>
+<color name="black">#FF000000</color>
+<color name="white">#FFFFFFFF</color>
+<color name="backGround">#68aa2b</color>
+<color name="backGroundEdit">#F7E5A8</color>
+<color name="cardColor">#F7E5A8</color>
+<color name="checkBoxColor">#000000</color>
+<color name="buttonColor">#68aa2b</color>
+<color name="strokeColor">#FF000000</color>
+
+</resources>-->
+
