--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="textDescription">20sp</dimen>
-    <dimen name="textTitle">30sp</dimen>
+    <dimen name="textTitle">25sp</dimen>
     <dimen name="_ButtonCreateNewDim">60sp</dimen>
     <dimen name="_Margin_1">10sp</dimen>
     <dimen name="_ButtonTextSize">20sp</dimen>
+    <dimen name="cardHeight">96dp</dimen>
+    <dimen name="cardCornerRadius">15dp</dimen>
+    <dimen name="cardElevation">3dp</dimen>
+    <dimen name="strokeWidth">1dp</dimen>
+    <dimen name="checkboxMarginEnd">12dp</dimen>
+    <dimen name="padding">16dp</dimen>
 </resources>
