--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MyNotes" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowSplashScreenBackground">#efefef</item>
+        <item name="android:windowSplashScreenBrandingImage">@drawable/splash_bottom</item>
+
+
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.MyNotes" parent="Base.Theme.MyNotes" />
+    <style name="Theme.MyNotes" parent="Base.Theme.MyNotes" >
+        <item name="android:windowSplashScreenBackground">#E8D8A8</item>
+    </style>
+
+
+    <style name="AppTheme" parent="Theme.Material3.DayNight">
+        <!-- или Theme.Material3.DynamicColors.DayNight -->
+    </style>
 </resources>
